--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Aplicação de gerenciamento de rotinas para avaliação facultativa",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "npx tsx watch src/index.ts"
   },
   "repository": {
     "type": "git",
