--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "npx tsx watch src/index.ts"
+    "dev": "npx tsx watch src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/H3nr1Yuk1/OnTiming-ProjetoJS#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^4.14.0",
+    "express": "^4.18.2",
+    "prisma": "^4.14.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
