--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "homepage": "https://github.com/H3nr1Yuk1/OnTiming-ProjetoJS#readme",
   "dependencies": {
     "@prisma/client": "^4.14.0",
-    "express": "^4.18.2",
-    "prisma": "^4.14.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "prisma": "^4.14.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   }
