--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/H3nr1Yuk1/OnTiming-ProjetoJS#readme",
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
