--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "prisma": "^4.14.0",
     "tsx": "^3.12.7",
